--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,17 @@
 
 
 body {
-  background-color: #98dc93;
+  background-color: #fdfdfd;
 }
 
 /* -----Header----- */
 
 .header-section {
+  color: #2CB872;
   display: flex;
   justify-content: center;
   border: 2px black solid;
-  font-size: 20px;
+  font-size: 250%;
 }
 
 .nav-btns-section {
@@ -27,25 +28,52 @@ body {
   justify-content: center;
 }
 
+.search-field {
+  width: 25%;
+}
+
 
 /* ------Buttons------ */
 
 button {
-  padding: 2% 4%;
+  background-color: #77D261;
   border: none;
   border-radius: 30px 30px 30px 30px;
+  font-size: 120%;
+  margin: 3%;
+  padding: 5% 8%;
+  /* width: 110%; */
+}
+
+div > button {
+  font-size: 120%;
+  padding: 4% 18%;
 }
 
 
+/*-----Main------*/
 
-/*  */
+.recipe-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px black solid;
+}
+
+.recipe-card-btn-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.recipe-name {
+  font-size: 200%;
+}
 
 
-
-
-
-
-
+.hidden {
+  display: none;
+}
 
 
 
