--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,6 @@ body {
   color: #2CB872;
   display: flex;
   justify-content: center;
-  border: 2px black solid;
   font-size: 250%;
 }
 
@@ -19,7 +18,6 @@ body {
   justify-content: center;
   justify-content: space-around;
   padding: 2% 30%;
-  border: 2px black solid;
 }
 
 .search-section {
@@ -41,13 +39,14 @@ button {
   border-radius: 30px 30px 30px 30px;
   font-size: 120%;
   margin: 3%;
-  padding: 5% 8%;
+  padding: 5% 6%;
   /* width: 110%; */
 }
 
 div > button {
   font-size: 120%;
   padding: 4% 18%;
+  /* width: 150%; */
 }
 
 
@@ -57,7 +56,6 @@ div > button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px black solid;
 }
 
 .recipe-card-btn-section {
