--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@ body {
   background-color: #fdfdfd;
 }
 
+section {
+  display: flex;
+  justify-content: center;
+}
+
 /* -----Header----- */
 
 .header-section {
@@ -56,6 +61,8 @@ div > button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 3px solid #000000;
+  width: 600px;
 }
 
 .recipe-card-btn-section {
@@ -66,6 +73,12 @@ div > button {
 
 .recipe-name {
   font-size: 200%;
+}
+
+.recipe-image {
+  border: 2px solid red;
+  height: 300px;
+  width: 600px;
 }
 
 
