--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,10 @@ div > button {
   /* width: 150%; */
 }
 
+.details-background > p {
+  margin: 10px;
+}
+
 
 /*-----Main------*/
 
@@ -72,7 +76,7 @@ div > button {
 }
 
 .recipe-name {
-  font-size: 200%;
+  font-size: 40px;
 }
 
 .recipe-image {
@@ -81,6 +85,20 @@ div > button {
   width: 600px;
 }
 
+.details-background {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2%;
+}
+
+.label {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.details-text {
+  font-size: 22px;
+}
 
 .hidden {
   display: none;
@@ -88,10 +106,17 @@ div > button {
 
 
 
+
+
 @media screen and (max-width: 813px) {
 
   body {
     background-color: lightblue;
+  }
+
+  .details-background {
+    display: flex;
+    flex-direction: column;
   }
 
   /* .main-header {
