Add addToCookbook and addToCookbookButton functions

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,10 @@ div > button {
   background-color: red;
 }
 
+.cookbook-recipe {
+  background-color: red;
+}
+
 .hidden {
   display: none;
 }
