Add innerHTML to displayInstructions function

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,7 @@ div > button {
   align-items: center;
   border: 3px solid #000000;
   margin: 2%;
+  height: auto;
   width: 600px;
 }
 
@@ -95,6 +96,7 @@ div > button {
   display: flex;
   flex-direction: column;
   margin-bottom: 2%;
+  height: auto;
 }
 
 .label {
