Fix bug with red color not toggling on buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,10 @@ div > button {
   background-color: red;
 }
 
+.display-instructions {
+  background-color: red;
+}
+
 .hidden {
   display: none;
 }
