--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 
-
 body {
-  background-color: #fdfdfd;
+  /* background-color: #fdfdfd; */
+  background-image: url("../assets/food.jpg");
 }
 
 section {
@@ -32,6 +32,7 @@ section {
 }
 
 .search-field {
+  font-size: 170%;
   width: 25%;
 }
 
@@ -42,10 +43,9 @@ button {
   background-color: #77D261;
   border: none;
   border-radius: 30px 30px 30px 30px;
-  font-size: 120%;
+  font-size: 140%;
   margin: 3%;
-  padding: 5% 6%;
-  /* width: 110%; */
+  padding: 2% 6%;
 }
 
 div > button {
@@ -54,9 +54,6 @@ div > button {
   /* width: 150%; */
 }
 
-.details-background > p {
-  margin: 10px;
-}
 
 
 /*-----Main------*/
@@ -92,11 +89,16 @@ div > button {
   width: 600px;
 }
 
+
 .details-background {
   display: flex;
   flex-direction: column;
   margin-bottom: 2%;
   height: auto;
+}
+
+.details-background > p {
+  margin: 10px;
 }
 
 .label {
