--- a/src/styles.css
+++ b/src/styles.css
@@ -12,10 +12,11 @@ section {
 /* -----Header----- */
 
 .header-section {
-  color: #2CB872;
+  /* color: #2CB872; */
+  color: Black;
   display: flex;
+  font-size: 350%;
   justify-content: center;
-  font-size: 250%;
 }
 
 .nav-btns-section {
@@ -64,12 +65,14 @@ div > button {
 }
 
 .recipe-card {
+  align-items: center;
+  background-color: rgba(242, 244, 249, 0.4);
+  /* background-color: #f2f4f9; */
+  border: 3px solid #000000;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  border: 3px solid #000000;
-  margin: 2%;
   height: auto;
+  margin: 2%;
   width: 600px;
 }
 
@@ -91,10 +94,13 @@ div > button {
 
 
 .details-background {
+  background-color: rgba(242, 244, 249, 0.4);
   display: flex;
   flex-direction: column;
-  margin-bottom: 2%;
+  font-size: 180%;
   height: auto;
+  margin-bottom: 2%;
+  padding: 4%;
 }
 
 .details-background > p {
