--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body {
   /* background-color: #fdfdfd; */
   background-image: url("../assets/food.jpg");
+  /* background-repeat: no-repeat; */
 }
 
 section {
@@ -53,7 +54,7 @@ button {
 
 div > button {
   font-size: 120%;
-  padding: 4% 18%;
+  padding: 6% 18%;
   /* width: 150%; */
 }
 
@@ -85,8 +86,12 @@ div > button {
   margin-top: 3%;
 }
 
-.recipe-name {
+.recipe-name-container {
+  display: flex;
   font-size: 40px;
+  justify-content: center;
+  padding: 0 2%;
+  text-align: center;
 }
 
 .recipe-image {
@@ -100,7 +105,7 @@ div > button {
   background-color: rgba(242, 244, 249, 0.0);
   display: flex;
   flex-direction: column;
-  font-size: 180%;
+  font-size: 200%;
   height: auto;
   margin-bottom: 2%;
   padding: 4%;
@@ -108,6 +113,12 @@ div > button {
 
 .details-background > p {
   margin: 10px;
+}
+
+.selected-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .label {
@@ -135,27 +146,12 @@ div > button {
   display: none;
 }
 
-
-
-
+/* ------Media Queries------ */
 
 @media screen and (max-width: 813px) {
-
-  body {
-    background-color: lightblue;
-  }
 
   .details-background {
     display: flex;
     flex-direction: column;
   }
-
-  /* .main-header {
-    display: flex;
-    border: 2px, black;
-    background-color: blue;
-  } */
-
-
-
 }
